tearchan-gfx/src/batch/snapshots/tearchan_gfx__batch__object_manager__test__events-2.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: convert_events(&mut manager)

---
[
    WriteToVertexBuffer {
        id: BatchObjectId(
            0,
        ),
        attribute: 1,
    },
    WriteToVertexBuffer {
        id: BatchObjectId(
            1,
        ),
        attribute: 0,
    },
]
