tearchan-gfx/src/batch/snapshots/tearchan_gfx__batch__object_manager__test__events-3.snap
---
source: tearchan-gfx/src/batch/v2/object_manager.rs
expression: convert_events(&mut manager)

---
[
    Remove {
        id: BatchObjectId(
            0,
        ),
    },
    ClearToIndexBuffer {
        pointer: BatchBufferPointer {
            first: 0,
            len: 1,
        },
    },
    ClearToVertexBuffer {
        pointer: BatchBufferPointer {
            first: 0,
            len: 1,
        },
    },
]
